# flake8-typing-as-t

./: .flake8  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  flake8_typing_as_t.py  flake8_typing_imports.py  justfile  pyproject.toml
.github/workflows/: ci.yaml
demo-files/: ex1_bare.py  ex2_bad_as.py  ex3_from.py  ex4_noqa_usage.py  ex4_version_check_allowed.py  flake8-config.ini
tests/: conftest.py  test_visitor.py
