[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flake8-typing-imports"
description = 'A flake8 plugin to check typing import style'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Stephen Rosen", email = "sirosen@globus.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.entry-points."flake8.extension"]
TYI = "flake8_typing_imports:Plugin"

[project.urls]
source = "https://github.com/sirosen/flake8-typing-imports"

[tool.hatch.version]
path = "flake8_typing_imports.py"

[tool.hatch.build]
include = ["flake8_typing_imports.py"]

[tool.hatch.envs.demo]
description = "Run the plugin as part of flake8 on examples"
dependencies = ["flake8"]
[tool.hatch.envs.demo.scripts]
run = "flake8 --config demo-files/flake8-config.ini demo-files/"
